--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,133 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>InstantRubyShot</title>
+  <title>Instant Ruby rimshot - For that special Ruby moment</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <!-- start Mixpanel -->
+  <script type="text/javascript">(function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===e.location.protocol?"https:":"http:")+'//cdn.mxpnl.com/libs/mixpanel-2.2.min.js';f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f);b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==
+typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");for(g=0;g<i.length;g++)f(c,i[g]);
+b._i.push([a,e,d])};b.__SV=1.2}})(document,window.mixpanel||[]);
+mixpanel.init("fb82bcf30251750c8a84e53cdc871415");</script>
+  <!-- end Mixpanel -->
+  <style type='text/css'>
+    @import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+
+    body{
+      font-family: 'Lato', sans-serif;
+      text-align: center;
+      background: #2c3e50;
+      color: #ecf0f1;
+    }
+
+    h1 {
+      font-size: 50px;
+      text-shadow: 0  5px #000;
+    }
+
+    header {
+      margin-top: 20px;
+    }
+
+    .button {
+      height: 130px;
+      width: 300px;
+      margin: 100px auto;
+      cursor:pointer;
+    }
+
+    .button div {
+      position: absolute;
+    }
+
+    .floor {
+      height: 50px;
+      width: 300px;
+      background: #34495e;
+      border-radius: 50%;
+      margin-top: 80px;
+      z-index: -1;
+    }
+
+    .top {
+      background: #e74c3c;
+      height: 40px;
+      width: 250px;
+      border-radius: 50%;
+      z-index:1;
+      margin-left: 25px;
+      -webkit-transition: all .2s;
+      -moz-transition: all .2s ;
+      -ms-transition: all .2s;
+      -o-transition: all .2s;
+      transition: all .2s;
+    }
+
+    .bottom {
+      background: #c0392b;
+      height: 40px;
+      width: 250px;
+      border-radius: 50%;
+      margin-top: 80px;
+      margin-left: 25px;
+    }
+
+    .body {
+      background: #c0392b;
+      height: 80px;
+      width: 250px;
+      border-radius: 0;
+      margin-top: 20px;
+      margin-left: 25px;
+      -webkit-transition: all .2s;
+      -moz-transition: all .2s ;
+      -ms-transition: all .2s;
+      -o-transition: all .2s;
+      transition: all .2s;
+    }
+
+    .button:active .body{
+      height: 40px;
+      margin-top: 60px;
+    } 
+
+    .button:active .top{
+      margin-top: 40px;
+    } 
+  </style>
+  <script type='text/javascript'>
+    function playAudio(id) {
+      document.getElementById(id).play(); 
+      mixpanel.track(id);
+    }
+  </script>
 </head>
 <body>
-
-<%= yield %>
-
+<header>
+  <img width='100' height='100' src='ruby-logo.png' />
+  <h1>Instant Ruby-shot</h1>
+</header>
+<div class='button' onclick="playAudio('rim1')">
+  <div class='top'></div>
+  <div class='bottom'></div>
+  <div class='body'></div>
+  <div class='floor'></div>
+</div>
+<div class='button' onclick="playAudio('rim2')">
+  <div class='top'></div>
+  <div class='bottom'></div>
+  <div class='body'></div>
+  <div class='floor'></div>
+</div>
+<audio id='rim1'>
+  <source src='ruby-rimshot.ogg' type='audio/ogg'>
+</audio>
+<audio id='rim2'>
+  <source src='ruby-rimshot2.ogg' type='audio/ogg'>
+</audio>
+<footer>
+Created by <a href="//twitter.com/itayad">@itayad</a></br>
+Design from <a href=//codingdroid.com">codingdroid.com</a>
+</footer>
 </body>
 </html>
