added share buttons

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -94,6 +94,14 @@ mixpanel.init("fb82bcf30251750c8a84e53cdc871415");</script>
     .button:active .top{
       margin-top: 40px;
     } 
+
+    .addthis_toolbox {
+      margin: 0 auto;
+      width: 300px;
+      text-align:center;
+      margin-bottom: 10px;
+      padding-left: 200px;
+    }
   </style>
   <script type='text/javascript'>
     function playAudio(id) {
@@ -125,9 +133,16 @@ mixpanel.init("fb82bcf30251750c8a84e53cdc871415");</script>
 <audio id='rim2'>
   <source src='ruby-rimshot2.ogg' type='audio/ogg'>
 </audio>
+<!-- AddThis Button BEGIN -->
+<div class="addthis_toolbox addthis_default_style">
+  <a class="addthis_button_tweet"></a>
+</div>
+<!-- AddThis Button END -->
 <footer>
 Created by <a href="//twitter.com/itayad">@itayad</a></br>
 Design from <a href=//codingdroid.com">codingdroid.com</a>
 </footer>
+<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5304d8b9370113f2"></script>
 </body>
 </html>
