moved assets to public/assets

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -112,7 +112,7 @@ mixpanel.init("fb82bcf30251750c8a84e53cdc871415");</script>
 </head>
 <body>
 <header>
-  <img width='100' height='100' src='ruby-logo.png' />
+  <img width='100' height='100' src='assets/ruby-logo.png' />
   <h1>Instant Ruby-shot</h1>
 </header>
 <div class='button' onclick="playAudio('rim1')">
@@ -128,10 +128,10 @@ mixpanel.init("fb82bcf30251750c8a84e53cdc871415");</script>
   <div class='floor'></div>
 </div>
 <audio id='rim1'>
-  <source src='ruby-rimshot.ogg' type='audio/ogg'>
+  <source src='assets/ruby-rimshot.ogg' type='audio/ogg'>
 </audio>
 <audio id='rim2'>
-  <source src='ruby-rimshot2.ogg' type='audio/ogg'>
+  <source src='assets/ruby-rimshot2.ogg' type='audio/ogg'>
 </audio>
 <!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style">
