--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -109,6 +109,7 @@ mixpanel.init("fb82bcf30251750c8a84e53cdc871415");</script>
       mixpanel.track(id);
     }
   </script>
+  <meta name="viewport" content="width=device-width, user-scalable=no">
 </head>
 <body>
 <header>
@@ -140,7 +141,7 @@ mixpanel.init("fb82bcf30251750c8a84e53cdc871415");</script>
 <!-- AddThis Button END -->
 <footer>
 Created by <a href="//twitter.com/itayad">@itayad</a></br>
-Design from <a href=//codingdroid.com">codingdroid.com</a>
+Design from <a href="//codingdroid.com/">codingdroid.com</a>
 </footer>
 <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5304d8b9370113f2"></script>
